[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptarchive"
version = "0.1.0"
description = "Local, Git-native prompt version control and regression testing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
promptarchive = "promptarchive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptarchive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
