[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name = "Sabareesh M B", email = "sabithesabareesh@gmail.com" }
]
name = "promptarchive"
version = "2.0.0"
description = "Local, Git-native prompt version control and regression testing."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2.0"]
secure = ["cryptography>=43.0.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
promptarchive = "promptarchive.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptarchive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
